@@ -546,6 +546,9 @@ Other Changes:
 - Style: Changed default style.WindowRounding value to 0.0f (matches default for multi-viewports).
 - Style: Reduced the size of the resizing grip, made alpha less prominent.
 - Style: Classic: Increase the default alpha value of WindowBg to be closer to other styles.
+- Demo: Added a fancy "particle text" demo in Examples->Custom Rendering. [@bdero]
+  Originally done as a 1024 bytes source, as part of the "ImDrawList coding party" challenge:
+    https://github.com/ocornut/imgui/issues/3606
 - Demo: Clarify usage of right-aligned items in Demo>Layout>Widgets Width.
 - Backends: OpenGL3: Use glGetString(GL_VERSION) query instead of glGetIntegerv(GL_MAJOR_VERSION, ...)
   when the later returns zero (e.g. Desktop GL 2.x). (#3530) [@xndcn]
